--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
     <div class="overlay-header"></div>
     <div class="container-header">
       <div class="wid-100 center-items">
-        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
-          <h1 class="fc-W text-center fs-50 fs-xs-30 fs-sm-40" >
+        <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+          <h1 class="fc-W text-center fs-50 fs-xs-30 fs-sm-40 upercase extra-bold" >
             Esta es la aplicacion para obtener notificaciones importantes
           </h1>
         </div>
       </div>
-      <div class="wid-100 center-items padding-t-b-50">
+      <div class="wid-100 center-items padding-b-50">
         <div class="wid-100 col-sm-12 col-md-10 col-lg-6">
           <h4 class="fc-W text-center line-height-small">Con <span class="label label-success">Notificator</span> nunca te perderas de ningun suceso importante, puedes escoger por que medio te notifiquen primero y luego continuen hasta que te llegue la informacion.</h4>
         </div>
@@ -38,6 +38,11 @@
           </div>
         </div>
       </div> 
+      <div class="wid-100 center-items">
+        <div class="icon-down center-items bounce-down">
+          <span class="fc-W glyphicon glyphicon-chevron-down">
+        </div>
+      </div>
     </div>
   </header>
   <!-- fin del header -->
@@ -109,7 +114,7 @@
         <!-- Informacion de contacto -->
           <div class="col-xs-12 col-sm-6">
             <div class="wid-100">
-              <h3>Detalles de contacto </h3>
+              <h3 class="title-bold">Detalles de contacto </h3>
               <p>
                   Semillero de Desarollo Web<br>Funlam Transversal 51 #28 - 90<br>Medellín, Antioquia Colombia
               </p>
@@ -135,11 +140,11 @@
           <div class="col-xs-12 col-sm-6">
             <div class="wid-100">
               <form>
-                <h2>Dejanos tu mensaje</h2>
+                <h3 class="title-bold">Dejanos tu mensaje</h3>
                 <input type="text" id="inputName" class="form-control input-opacity-05 transition-all margin-t-b-10" placeholder="Ingresa tu nombre"></input>
                 <input type="email" id="inputEmail" class="form-control input-opacity-05 transition-all margin-t-b-10" placeholder="Ingresa tu correo electronico"></input>
-                <textarea type="text" rows="5" id="inputMessage" class="form-control input-opacity-05 transition-all margin-t-b-10" placeholder="Escribe aqui tu mensaje" required></textarea>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Enviar Mensaje</button>
+                <textarea type="text" rows="5" id="inputMessage" class="form-control input-opacity-05 transition-all margin-t-b-10" placeholder="Escribe aqui tu mensaje" ></textarea>
+                <button id="enviarmensaje" class="btn btn-lg btn-primary btn-block" type="submit">Enviar Mensaje</button>
               </form>
             </div>
           </div>
@@ -187,7 +192,7 @@
         <p class="fc-W fs-12 text-center">Todos los derechos reservados Semillero de Desarrollo Web Funlam 2015</p>
       </div>
       <div class="wid-100 center-items">
-        <p class="fc-W fs-10">Made With <span class="my-icon my-icon-heart hearth-beat"></span> By SeDeWeb</p>
+        <p class="fc-W fs-10">Made With <span class="my-icon my-icon-heart heart-beat"></span> By SeDeWeb</p>
       </div>
     </div>
   </footer>
