my first commit

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -23,17 +23,17 @@
           </h1>
         </div>
       </div>
-      <div class="wid-100 center-items padding-b-50">
+      <div class="wid-100 center-items">
         <div class="wid-100 col-sm-12 col-md-10 col-lg-6">
           <h4 class="fc-W text-center line-height-small">Con <span class="label label-success">Notificator</span> nunca te perderas de ningun suceso importante, puedes escoger por que medio te notifiquen primero y luego continuen hasta que te llegue la informacion.</h4>
         </div>
       </div>
       <div class="wid-100 center-items padding-t-b-50">
-        <div class="col-xs-10 col-sm-6 center-items">
-          <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-6 no-padding">
+          <div class="col-xs-6">
             <a href="#" class="btn btn-primary center-block" role="button">Resgistrarse</a>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-6">
             <a href="#" class="btn btn-default center-block" role="button">Iniciar Sesion</a>
           </div>
         </div>
@@ -107,6 +107,7 @@
       </div>
     </div>
   </section>
+  <!-- SECCION DE CONTACTO -->
   <section >
     <div class="container-padding-medium bg-image-contact">
       <div class="overlay-header bg-gradient-blue"></div>
@@ -152,10 +153,86 @@
       </div>
     </div>
   </section>  
+   <!-- SECCION DE EQUIPO DE TRABAJO -->
+  <section >
+    <div class="container-padding-small bg-image-team">
+        <div class="row">
+        <div class="wid-100 center-items">
+          <h3 class="title-bold">Nuestro equipo de trabajo</h3>
+        </div>
+        <!-- primer integrante -->
+        <div class="profile-container-card">
+          <div class="thumbnail">
+            <div class="wid-100 bg-silver center-items">
+              <img class="img-responsive" src="img/profile04.jpg" alt="logo de bootstap">
+            </div>
+            <div class="caption team-caption">
+              <h3 class="fs-16">Jeison Caro Estrada</h3>
+              <p class="fs-12" >Lider del equipo - Desarrollador Web</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin primer integrante -->
+        <!-- segundo integrante -->
+        <div class="profile-container-card">
+          <div class="thumbnail">
+            <div class="wid-100 bg-silver center-items">
+              <img class="img-responsive" src="img/profile02.jpg" alt="pperfil camilo hernandez">
+            </div>
+            <div class="caption team-caption">
+              <h3 class="fs-16">Juan camilo Hernandez</h3>
+              <p class="fs-12">Estudiante de Ingenieria Funlam - Desarrollador Web</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin segundo integrante -->
+        <!-- tercer integrante -->
+        <div class="profile-container-card">
+          <div class="thumbnail">
+            <div class="wid-100 bg-silver center-items">
+              <img class="img-responsive" src="img/profile03.jpg" alt="pperfil camilo hernandez">
+            </div>
+            <div class="caption team-caption">
+              <h3 class="fs-16">Andres Sebastian Calle</h3>
+              <p class="fs-12">Estudiante de Ingenieria Funlam - Desarrollador Web</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin tercer integrante -->
+        <!-- cuarto integrante -->
+        <div class="profile-container-card">
+          <div class="thumbnail">
+            <div class="wid-100 bg-silver center-items">
+              <img class="img-responsive" src="img/profile05.jpg" alt="pperfil camilo hernandez">
+            </div>
+            <div class="caption team-caption">
+              <h3 class="fs-16">Santiago Muriel Hurtado</h3>
+              <p class="fs-12">Estudiante de Ingenieria Funlam - Desarrollador Web</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin cuarto integrante -->
+        <!-- quinto integrante -->
+        <div class="profile-container-card">
+          <div class="thumbnail">
+            <div class="wid-100 bg-silver center-items">
+              <img class="img-responsive" src="img/profile01.jpg" alt="pperfil camilo hernandez">
+            </div>
+            <div class="caption team-caption">
+              <h3 class="fs-16">Christian Esneider Rendon Sanchez</h3>
+              <p class="fs-12">Estudiante de Ingenieria Funlam - Desarrollador Web</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin quinto integrante -->
+      </div>
+    </div>
+  </section>  
+  <!-- FOOTER -->
   <footer id="footer">
     <div class="wid-100 center-items margin-t-b-20">
       <div class="col-xs-12 col-sm-12 col-md-10 col-lg-8">
-        <h4 class="fc-W text-center" >
+        <h4 class="fc-W text-center line-height-small" >
           Siguenos en nuestras redes sociales
           <span class="label label-info" aria-hidden="true">
             <span class="my-icon my-icon-thumb-up" aria-hidden="true"></span>
